--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./sliderstyles.css">
 </head>
 
 <body>
   <section>
     <div class="video">
       <iframe width="800" height="540" src="https://www.youtube.com/embed/Rv9hn4IGofM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="brand">
+        <div class="circle"></div>
+        <div class="logo"><h2>Blazel-TV</h2></div>
+      </div>
     </div>
 
     <div class="buttons">
-
+      <h1>Options</h1>
       <div class="option">
-        <label>Saturation <span class="saturation-output">0</span></label>
+        <label>Saturation <span class="saturation-output">1</span></label>
         <input type="range" name="saturate" min=1 max=500 value=1>
       </div>
 
       <div class="option">
         <label>Blur <span class="blur-output">0</span></label>
-        <input type="range" name="blur" min=1 max=500 value=0>
+        <input type="range" name="blur" min=0 max=300 value=0>
       </div>
     </div>
 
